remove versions from formatters